--- a/Text_classification.ipynb
+++ b/Text_classification.ipynb
@@ -32,7 +32,7 @@
         "id": "ItXfxkxvosLH"
       },
       "source": [
-        "# Basic text classification"
+        "#  text classification"
       ]
     },
     {
